--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "next": "15.1.6",
     "react": "^19.0.0",
+    "react-autosave": "^0.4.4",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
